# onthelam

./: .gitignore  Pipfile  README.md  check  pylintrc  pyproject.toml  setup.cfg  setup.py  static-analysis
onthelam/: __init__.py  astoperations.py  lambdabuilder.py  magic.py
tests/: test_astoperations.py  test_lambdabuilder.py  test_magic.py
