[metadata]
name = on-the-lam
version = 1.0.0.post1
author = abstiles
description = Easier Python lambdas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abstiles/onthelam
project_urls =
    Bug Tracker = https://github.com/abstiles/onthelam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[mypy]
python_version = 3.9
strict = True
warn_unused_ignores = True
warn_unreachable = True
